--- a/ReadMe
+++ b/ReadMe
@@ -1,7 +1,1 @@
-echo "# CLMA-Net" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/mengkai-liu/CLMA-Net.git
-git push -u origin main
+This repository is an implementation of CLMA-Net, the code is being sorted out and will be shared out later, any questions can be emailed to me at liumengkai@hnu.edu.cn
